--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -39,9 +39,7 @@
     .main-container {
         padding: 15px;
     }
-}
 
-@media (max-width: 575.98px) {
     .country-card {
         height: 68px;
 
@@ -56,5 +54,9 @@
         & p {
             font-size: 13px;
         }
+    }
+
+    .welcome-border {
+        height: 0px;
     }
 }
